// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuTable component should match the default table (ideas table) 1`] = `
<Connect(Apollo(Component))
  discussionPhaseId="2"
  identifier="foo"
  phaseId="RGlzY3Vzc2lvblBoYXNlOjI="
/>
`;

exports[`MenuTable component should match the survey table 1`] = `
<Connect(Apollo(Component))
  discussionPhaseId="2"
  identifier="survey"
  phaseId="RGlzY3Vzc2lvblBoYXNlOjI="
/>
`;
